--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xuan-zeng-project3",
   "proxy": "http://localhost:8000/",
   "version": "0.1.0",
-   "engines": {
+  "engines": {
     "node": "v14.18.1"
   },
   "private": true,
@@ -14,6 +14,7 @@
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.0",
