--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "luxon": "^2.3.0",
     "mongoose": "^6.1.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
